--- a/src/template.html
+++ b/src/template.html
@@ -1,3 +1,4 @@
-<div class="hello">
-    hello world
-</div>
+
+    <svg class="svg" width='100%' height='100%'>
+    </svg>
+    <div id="tooltip" class="tooltip">10</div>
